# nonclairvoyant-scheduling

./: .gitignore  Cargo.toml  README.md  copy_plots.sh  exps.sh  plot  plot.py  plot2  plots.sh  result.csv
src/: alg_identical.rs  algorithms.rs  error.rs  instance.rs  job.rs  main.rs  prediction.rs  sample.rs
