[package]
name = "schedules"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
indicatif = {version = "0.16.2", features = ["rayon"]} 
rayon = "1.5.1"
itertools-num = "0.1.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.37"

[profile.release]
debug = true